# GamePals

./: .gitignore  LICENSE  README.md  __init__.py  config.toml  config.toml.example  main.py  pyproject.toml  requirements.txt
agents/: __init__.py  action_input.py  actor.py  actor_id.py  actor_observer.py  copilot.py  datas.py  human_actor.py  input_source.py  observer.py  observers.py  pilot.py  sw_agent_actor.py  sw_agent_sequenced_actor.py
command_arbitrator/: command_arbitrator.py
command_arbitrators/: __init__.py  command_arbitrator.py  dual_arbitrator.py  equal_arbitrator.py  game_actions_map.py  policy_manager.py
config/: agents.toml.example  game.toml.example
config.example/: assistance.toml.example  game.toml.example
copilot/: __init__.py
doom/: __init__.py  doom_game_state.py  doom_state_listener.py  expert_system_copilot.py  game_state_listener.py  gamestate_listener.py  observers.py  utils.py
game_controllers/: __init__.py  controller_inputs_map.py  physical_controller_listener.py  utils.py  virtual_controller_provider.py
input_sources/: __init__.py  controller_inputs_map.py  game_state_listener.py  physical_controller_listener.py  virtual_controller_provider.py
rocket-league-game-adaptation/: .gitignore  README.md  main.py  run.bat
sources/: __init__.py  configuration_handler.py  controller_inputs.py  controller_inputs_map.py  game_state.py  game_state_listener.py  physical_controller_listener.py  virtual_controller_provider.py
utils/: __init__.py  arg_parser.py  args.py  config.py  configuration_handler.py  utils.py
(+168 files in other folders)
