[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot"
version = "0.9"
description = "Framework to enables shared control over video game instances"
authors = [
  { name="Matteo Manzoni", email="matteo.manzoni2@studenti.unimi.it" },
  { name="Filippo Corti", email="filippo.corti1@studenti.unimi.it" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "vgamepad~=0.1.0",
  "inputs~=0.5"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["copilot/copilot"]
include = ["copilot/copilot/*"]