[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GamePals"
version = "1.0"
description = "GamePals framework to enables shared control over video game instances"
authors = [
  { name="Matteo Manzoni" },
  { name="Filippo Corti" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "vgamepad~=0.1.0",
  "inputs~=0.5"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
gamepals = ["py.typed"]

